SimpleComplex/Database 1.x, 2018-04-24
--------------------------------------
- Clarify which methods are 'package protected'; @internal.
- Order sequence of methods in code by relevance to user.
- More exceptions must be preceded by unsetting prepared statement arguments
  reference.

SimpleComplex/Database 1.x, 2018-04-23
--------------------------------------
- Prepared statement arguments reference unsetting problem solved by setting
  the reference on an array bucket of an instance var; instead of on the
  instance var itself.
- Err on attempt to execute() closed statement.

SimpleComplex/Database 1.x, 2018-04-22
--------------------------------------
- MS SQL client info.
- The parameter marker is now a constant; not necessarily question mark.
- Splitting query by parameter marker - and checking for parameters/arguments
  count mismatch - moved to decidated method.
- MS SQL query use automated parameter substitution even when non-prepared
  statement.
- Handle that query instance var prepared-statement-arguments is a reference,
  and that unsetting it renders the query object useless.

SimpleComplex/Database 1.x, 2018-04-21
--------------------------------------
- Check parameter types.
- Query multi-query features sorted.
- Client options resolved into separate optionsResolved property.
  And connection flags is a MariaDb/MySQL-only feature.
- Client public optionsResolve() to facilitate debugging.
- MS SQL query and result complete.

SimpleComplex/Database 1.x, 2018-04-20
--------------------------------------
- Client getConnection() shan't default to re-connect.
- Refer prepared statements arguments.
- Close prepared statement on query object destruction.
- Uniform error messages, stating database type and client name.
- Query execute.
- Forbid starting transaction when previously ditto isn't terminated yet.
- Document that MariaDB prepared statement requires the mysqlnd driver.
  Because a result set will eventually be handled as \mysqli_result