@@ -154,8 +154,12 @@ class MariaDbQuery extends DatabaseQuery
         /** @var \mysqli_stmt|bool $mysqli_stmt */
         $mysqli_stmt = @$mysqli->prepare($this->query);
         if (!$mysqli_stmt) {
+            $this->client->log(
+                $this->errorMessagePrefix() . ' - ' . __FUNCTION__ . '(), query',
+                substr($this->query, 0, static::LOG_QUERY_TRUNCATE)
+            );
             throw new DbRuntimeException(
-                $this->client->errorMessagePrefix()
+                $this->errorMessagePrefix()
                 . ' - query failed to prepare statement, with error: ' . $this->client->nativeError() . '.'
             );
         }
@@ -166,8 +170,12 @@ class MariaDbQuery extends DatabaseQuery
             if (!@$mysqli_stmt->bind_param($tps, ...$this->arguments['prepared'])) {
                 // Unset prepared statement arguments reference.
                 $this->unsetReferences();
+                $this->client->log(
+                    $this->errorMessagePrefix() . ' - ' . __FUNCTION__ . '(), query',
+                    substr($this->query, 0, static::LOG_QUERY_TRUNCATE)
+                );
                 throw new DbRuntimeException(
-                    $this->client->errorMessagePrefix()
+                    $this->errorMessagePrefix()
                     . ' - query failed to bind parameters prepare statement, with error: '
                     . $this->client->nativeError() . '.'
                 );
@@ -213,12 +221,11 @@ class MariaDbQuery extends DatabaseQuery
                 // Unset prepared statement arguments reference.
                 $this->unsetReferences();
                 $this->client->log(
-                    'warning',
-                    $this->client->errorMessagePrefix() . ' - failed executing prepared statement, query',
-                    $this->query
+                    $this->errorMessagePrefix() . ' - ' . __FUNCTION__ . '(), query',
+                    substr($this->query, 0, static::LOG_QUERY_TRUNCATE)
                 );
                 throw new DbQueryException(
-                    $this->client->errorMessagePrefix()
+                    $this->errorMessagePrefix()
                     . ' - failed executing prepared statement, with error: ' . $this->client->nativeError() . '.'
                 );
             }
@@ -230,12 +237,11 @@ class MariaDbQuery extends DatabaseQuery
             // bool.
             if (!@$mysqli->multi_query($this->queryTampered ?? $this->query)) {
                 $this->client->log(
-                    'warning',
-                    $this->client->errorMessagePrefix() . ' - failed executing multi-query',
-                    $this->queryTampered ?? $this->query
+                    $this->errorMessagePrefix() . ' - ' . __FUNCTION__ . '(), query',
+                    substr($this->queryTampered ?? $this->query, 0, static::LOG_QUERY_TRUNCATE)
                 );
                 throw new DbQueryException(
-                    $this->client->errorMessagePrefix()
+                    $this->errorMessagePrefix()
                     . ' - failed executing multi-query, with error: ' . $this->client->nativeError() . '.'
                 );
             }
@@ -247,12 +253,11 @@ class MariaDbQuery extends DatabaseQuery
             // bool.
             if (!@$mysqli->real_query($this->queryTampered ?? $this->query)) {
                 $this->client->log(
-                    'warning',
-                    $this->client->errorMessagePrefix() . ' - failed executing simple query',
-                    $this->queryTampered ?? $this->query
+                    $this->errorMessagePrefix() . ' - ' . __FUNCTION__ . '(), query',
+                    substr($this->queryTampered ?? $this->query, 0, static::LOG_QUERY_TRUNCATE)
                 );
                 throw new DbQueryException(
-                    $this->client->errorMessagePrefix()
+                    $this->errorMessagePrefix()
                     . ' - failed executing simple query, with error: ' . $this->client->nativeError() . '.'
                 );
             }
